# contactsheet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/contactsheet/: api.py  cli.py  errors.py  extract.py  models.py  probe.py  runner.py  sheet.py
tests/: test_api.py  test_extract.py  test_models.py  test_runner.py  test_sheet.py
