[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contactsheet"
version = "0.1.0"
description = "Turn a video into a contact-sheet PDF of evenly-spaced frames — a CLI and small API over ffmpeg"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pillow>=10",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "python-multipart>=0.0.9"]
dev = ["pytest>=8", "ruff", "mypy", "httpx>=0.27"]

[project.scripts]
contactsheet = "contactsheet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contactsheet"]